# orca_backend

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  db.sqlite3-journal  docker-compose.yml  manage.py  orca_backend_logging.yaml  pyproject.toml  pytest.ini  readme.md
.github/workflows/: docker-publish.yml
authentication/: models.py  permission.py  serializers.py  urls.py  views.py
authentication/test/: test_add_admin.py  test_authentication.py  test_change_password.py  test_delete.py  test_get_user.py  test_register.py  test_update.py
device/: urls.py
fileserver/: apps.py  constants.py  dhcp.py  models.py  scheduler.py  ssh.py  tasks.py  urls.py  views.py  ztp.py
fileserver/test/: test_common.py  test_dhcp.py  test_dhcp_config.yaml  test_fileserver.py  test_ztp.py
log_manager/: apps.py  decorators.py  logger.py  models.py  serializers.py  urls.py  views.py
log_manager/test/: test_add_logs.py  test_common.py  test_decorator.py  test_delete_logs.py  test_get_logs.py
network/: __init__.py  admin.py  apps.py  bgp.py  breakout.py  interface.py  ip_polling.py  mclag.py  middleware.py  models.py  port_chnl.py  port_group.py  scheduler.py  serializers.py  setup.py  stp.py  stp_port.py  stp_vlan.py  tasks.py  urls.py  util.py  views.py  vlan.py
network/config/: logging.yml  orca.yml  orca_nw_lib.yml  orca_nw_lib_logging.yml
network/test/: bgp_test.py  interface_test.py  mclag_test.py  port_chnl_test.py  port_group_test.py  temp_test.py  test_bgp.py  test_breakout.py  test_common.py  test_create_sample_config.py  test_delete_db.py  test_discovery.py  test_interface.py  test_interface_config.py  test_ip_polling.py  test_mclag.py  test_network.py  test_orca_api.py  test_orca_setup_config.yaml  test_port_chnl.py  test_port_chnl_config.py  test_port_group.py  test_setup.py  test_stp.py  test_stp_port.py  test_stp_vlan.py  test_subscription.py  test_vlan.py  vlan_test.py
orca_backend/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
orca_setup/: apps.py  setup.py  tasks.py  urls.py  views.py
orca_setup/test/: test_common.py  test_setup.py
orca_setup/tests/: test_orca_setup_config.yaml  test_setup.py
orcask/: apps.py  urls.py  views.py
state_manager/: apps.py  middleware.py  models.py  urls.py  views.py
user_auth/: serializers.py  urls.py  views.py  views_copy.py
user_auth/test/: test_user.py
(+5 files in other folders)
