[tool.poetry]
name = "orca_backend"
version = "0.1.0"
description = "Orca backend web server implemets orca_nw_lib"
readme = "README.md"
authors = ["kamal bhatt <kamal.bhatt@stordis.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.8"
djangorestframework = "^3.14.0"
django-cors-headers = "^3.14.0"
pytest = "^7.3.2"
pytest-django = "^4.7.0"
orca-nw-lib = "*" # Use latest version of orca_nw_lib from PyPI
packaging = "^23.2"# Because of langchain dependencies in ORCASK, packaging should not be greater than 23.y.z.
setuptools = "~69.1" # Fixing the setuptools version for github actions to pass if not specified github actions picks up 74.2.0 and fails to install that.

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
