[tool.poetry]
name = "orca_backend"
version = "0.1.0"
description = "Orca backend web server implemets orca_nw_lib"
readme = "README.md"
authors = ["kamal bhatt <kamal.bhatt@stordis.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
Django = "^4.2.8"
djangorestframework = "^3.14.0"
django-cors-headers = "^3.14.0"
APScheduler = "^3.10.4"
celery = "^5.4.0"
redis = "^5.0.4"
django-celery-results="2.5.1"
isc-dhcp-leases = "^0.10.0"
orca-nw-lib = "*"
